--- a/build.gradle
+++ b/build.gradle
@@ -99,8 +99,15 @@ dependencies {
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_lifecycle_viewmodel"
     kapt "androidx.hilt:hilt-compiler:$hilt_lifecycle_viewmodel"
 
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
     def glide = "4.11.0"
     implementation "com.github.bumptech.glide:glide:$glide"
     kapt "com.github.bumptech.glide:compiler:$glide"
+
+
+    // Coil
+    implementation "io.coil-kt:coil:1.1.1"
+    implementation "com.google.accompanist:accompanist-coil:0.7.0"
 
 }
